Closed Bug 1038492 Opened 11 years ago Closed 11 years ago

Cherry-pick libyuv's fix for clang-cl compatibility

Categories

(Core :: WebRTC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

This imports the following upstream change: https://code.google.com/p/libyuv/source/detail?r=1033
Assignee: nobody → ehsan
Blocks: winclang
Attachment #8455846 - Flags: review?(rjesup)
Comment on attachment 8455846 [details] [diff] [review] Cherry-pick libyuv's fix for clang-cl compatibility Review of attachment 8455846 [details] [diff] [review]: ----------------------------------------------------------------- Ok, so long as we're not talking about shipping builds on Windows clang.
Attachment #8455846 - Flags: review?(rjesup) → review+
(In reply to Randell Jesup [:jesup] from comment #2) > Ok, so long as we're not talking about shipping builds on Windows clang. We're far away from that still... https://hg.mozilla.org/integration/mozilla-inbound/rev/23b67deeba5d
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: