Bug 1038492 - Cherry-pick libyuv's fix for clang-cl compatibility; r=jesup

This imports the following upstream change:
https://code.google.com/p/libyuv/source/detail?r=1033